--- a/moshroom-home-mobile/about_us.html
+++ b/moshroom-home-mobile/about_us.html
@@ -9,45 +9,50 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/zepto.fullpage.css">
     <link rel="stylesheet" href="css/animate.css">
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 </head>
-<body style="background-color: #116ad9;">
+<body>
     <div class="">
         <div class="-wp-inner">
-            <div class="header-con">
-                <div class="header">
-                    <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
-                </div>
-                <div class="nav">
-                    <button type="button" class="navbar-toggle nav-btn" data-toggle="collapse" data-target="#navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>    
-                    </button>
-                </div>
+            <div class="header">
+                <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
             </div>
-                
+            <div class="nav">
+                <button type="button" class="navbar-toggle nav-btn" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>    
+                </button>
+            </div>
             <div class="nav-box">
-                <i class="closed-btn">x</i>
+                <i class="closed-btn"></i>
                 <ul class="navbar-nav navbar-right" style="">
-                    <li class="active"><a href="#">产品</a></li>
-                    <li><a href="#">关于我们</a></li>
-                    <li><a href="#">城市</a></li>
-                    <li><a href="#">新闻</a></li>
-                    <li><a href="#">广告合作</a></li>
+                    <li class="active"><a href="/">产品</a></li>
+                    <li><a href="about_us.html">关于我们</a></li>
+                    <!--<li><a href="#">城市</a></li>-->
+                    <li><a href="https://news.moshroom.cn">新闻</a></li>
+                    <li><a href="cooperation.html">广告合作</a></li>
                 </ul>
             </div>
+            <div class="us-header-con">
+                <h2 class="about-title-name">关于摩室科技</h2>
+            </div>
             <div class="about-us">
-                <h2>关于摩室科技</h2>
-                <img src="images/banner/3.jpg" alt="" class="img-banner">
-                <p>智能家居一直是一个很火的话题，有些人可能了解过智能家居，有些人可能只是听过这个名字而已。现如今物联网兴起，万物都被接入了互联网，冰箱、洗衣机、电视、甚至是花盆，渐渐的智能家居也走入了我们的身边。</p>
-                <p>相信大家对智能家居的了解大多是来自于像小米、阿里、博联等这样的互联网企业。其实智能家居最早起源于上个世纪末的美国，像国际上比较有名的智能家居品牌，比如：美系的快思聪、Control4、AMX，欧系的KNX系统，美系品牌最早用于多媒体影音控制，而欧系KNX系统最早应用于楼宇智能化，更加偏重于机电控制。不同于我们现在看到的小米智能家居单品那样，上面说到的欧美系智能家居产品都需要在装修前期进行方案制定、综合布线规划，这些设备通过专用的通讯总线连接起来，形成一个整体。然后工程师进行设备安装、逻辑编程、交互界面制作、调试等工作，最终形成一整套稳定高效的智能家居系统。</p>
-                <p>而国内这些互联网公司做的智能家居，其实只能说是智能单品，通过使用同一个品牌的不同智能单品，然后再APP端进行设置组网等，形成一个联动系统，基本上熟悉手机操作的同学都可以搞定。</p>
-                <p>13年注册的尾巴账号，这个是第一个帖子，13年接触智能家居并从业到现在，大家对智能家居有什么想法，有什么想了解的，都可以回复，我会给大家一一解答。</p>
-
+                <img src="images/img/1.jpg" alt="" class="img-banner">
+                <p>在大家的生活中，是否出现过出行在外找不到卫生间，找到后又苦于卫生间太脏，气味难闻的问题？</p>
+                <p>北京摩室科技有限公司是一家通过互联网及大数据生产运营移动公共卫生间的新型科技公司。创始人及早期投资人均是互联网行业资深从业者。公司致力于为全球城市及农村人口提供方便干净的如厕服务。公司生产的移动卫生间通过光伏系统供电，免水可冲洗厕具可以不用外接任何水源电源为用户提供跟普通卫生间相同的如厕体验。</p>
+                <p style="text-indent: 0;">与传统移动卫生间相比优势有以下几点：</p>
+                <p>1、传统移动卫生间都需要外接水源和电源。摩室卫生间通过光伏系统供电，免水可冲洗技术进行便池冲洗。 </p>
+                <p>2、传统卫生间无任何互联网功能，摩室卫生间通过扫码如厕等软件功能，更好的管理了使用者的使用行为。保洁人员通过后台可以看到每个卫生间的使用情况，可以提供更快速及时的保洁服务。</p>
+                <p>3、传统移动卫生间外观都较不美观，无设计感，使用PVC板材不耐用。摩室卫生间采用铝合金结构，兼顾了美观和耐用。</p>
+                <p>4、摩室卫生间内部提供了更好的服务，不仅有目前大家习以为常的免费纸巾，衣帽钩之外，室内还有一个小型自动售货机，销售纸巾湿巾卫生巾等应急用品。</p>
+                <p>2018年8月，光明日报头版头条报道摩室卫生间。</p>
+                <p>2018年11月10日，中央电视台新闻联播报道摩室卫生间。</p>
+                <p>2018年11月18日，北京新闻报道摩室科技。</p>
                 <div class="footer" style="display: none;">
-                    <img src="images/img/sina.png" class="icon-top js-animate" data-animate="fadeInDown" data-time="0" alt="">  
+                    <a href="https://weibo.com/moshtech?topnav=1&wvr=6&topsug=1"><img src="images/img/sina.png" class="icon-top js-animate" data-animate="fadeInDown" data-time="0" alt="" width="106"></a>
                     <div class="contact js-animate animated" data-animate="fadeInDown" data-time="300">
-                       <img src="images/img/wechat.png" alt="">  
+                       <img src="images/img/wechat.png" alt="" width="106">
                     </div>
                     <p class="phone js-animate animated" data-animate="fadeInDown" data-time="600">4008-861-921</p>
                     <p class="word-times js-animate animated" data-animate="fadeInDown" data-time="900">工作日 早10:00-晚8:00</p>
@@ -103,6 +108,55 @@
                 }
             }
         });
+
+        $(function () {
+            $.ajax({
+                url: "https://moshroom.cn/jwcms/index1.php?s=/Home/Index/wxsignatrue",
+                type: "POST",
+                dataType: 'json',
+                data: {
+                    'host': encodeURIComponent(document.URL.split('#')[0])
+                },
+                success: function (e) {
+                    if (e.code === 0) {
+                        wx.config({
+                            debug: false,
+                            url: e.data.url,
+                            appId: e.data.appId,
+                            timestamp: e.data.timestamp,
+                            nonceStr: e.data.nonceStr,
+                            signature: e.data.signature,
+                            jsApiList: [
+                                'onMenuShareTimeline',
+                                'onMenuShareAppMessage',
+                                'onMenuShareQQ',
+                                'onMenuShareWeibo',
+                                'onMenuShareQZone',
+                            ]
+                        });
+                        wx.ready(function () {
+                            let param = {
+                                title: '摩室科技 - 关于我们', // 分享标题
+                                desc: '摩室移动智能卫生间\n方便你我，智享生活。', // 分享描述
+                                link: document.URL, // 分享链接，该链接域名或路径必须与当前页面对应的公众号JS安全域名一致
+                                imgUrl: 'http://moshroom.cn/images/300.png', // 分享图标
+                                type: '', // 分享类型,music、video或link，不填默认为link
+                                dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
+                                success: function () {}
+                            };
+                            wx.onMenuShareTimeline(param);
+                            wx.onMenuShareAppMessage(param);
+                            wx.onMenuShareQQ(param);
+                            wx.onMenuShareWeibo(param);
+                            wx.onMenuShareQZone(param);
+                        });
+                    } else {
+                        console.log(e.message);
+                    }
+                }
+            });
+        });
+
     </script>
 </body>
 </html>
