移动端关于我们

--- a/moshroom-home-mobile/about_us.html
+++ b/moshroom-home-mobile/about_us.html
@@ -14,26 +14,29 @@
 <body>
     <div class="">
         <div class="-wp-inner">
-            <div class="header">
-                <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
+            <div class="header-top">
+                <div class="header">
+                    <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
+                </div>
+                <div class="nav">
+                    <button type="button" class="navbar-toggle nav-btn" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>    
+                    </button>
+                </div>
+                <div class="nav-box">
+                    <i class="closed-btn"></i>
+                    <ul class="navbar-nav navbar-right" style="">
+                        <li class="active"><a href="/">产品</a></li>
+                        <li><a href="about_us.html">关于我们</a></li>
+                        <!--<li><a href="#">城市</a></li>-->
+                        <li><a href="https://news.moshroom.cn">新闻</a></li>
+                        <li><a href="cooperation.html">广告合作</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="nav">
-                <button type="button" class="navbar-toggle nav-btn" data-toggle="collapse" data-target="#navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>    
-                </button>
-            </div>
-            <div class="nav-box">
-                <i class="closed-btn"></i>
-                <ul class="navbar-nav navbar-right" style="">
-                    <li class="active"><a href="/">产品</a></li>
-                    <li><a href="about_us.html">关于我们</a></li>
-                    <!--<li><a href="#">城市</a></li>-->
-                    <li><a href="https://news.moshroom.cn">新闻</a></li>
-                    <li><a href="cooperation.html">广告合作</a></li>
-                </ul>
-            </div>
+                
             <div class="us-header-con">
                 <h2 class="about-title-name">关于摩室科技</h2>
             </div>
