--- a/moshroom-home-mobile/home_page.html
+++ b/moshroom-home-mobile/home_page.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="display-flex flex">
                     <div class="flex-con">
-                        <div class="js-animate animated" data-animate="zoomIn" data-time="300">
+                        <div class="js-animate animated first-img" data-animate="zoomIn" data-time="300">
                             <img src="images/img/room.png" alt="" class="room-pig">
                         </div>
                         <div class="js-animate animated" data-animate="fadeInDown" data-time="600">
@@ -168,9 +168,9 @@
     <script src="js/zepto.js"></script>
     <script src="js/zepto.fullpage.js"></script>
     <script>
-        // let windowH = $(window).height() - 40,
-        //     imgH = windowH / 3;
-        // $('.second-img').height(imgH);
+        let windowH = $(window).height() - 40,
+            imgH = windowH / 3;
+        $('.second-img').height(imgH);
         $(".nav-btn").click(function(event) {
             $(".nav-box").show();
             $.fn.fullpage.stop() 
