--- a/moshroom-home-mobile/about_us.html
+++ b/moshroom-home-mobile/about_us.html
@@ -25,23 +25,22 @@
                         <span class="icon-bar"></span>    
                     </button>
                 </div>
-                <div class="nav-box">
-                    <i class="closed-btn"></i>
-                    <ul class="navbar-nav navbar-right" style="">
-                        <li class="active"><a href="/">产品</a></li>
-                        <li><a href="about_us.html">关于我们</a></li>
-                        <!--<li><a href="#">城市</a></li>-->
-                        <li><a href="https://news.moshroom.cn">新闻</a></li>
-                        <li><a href="cooperation.html">广告合作</a></li>
-                    </ul>
-                </div>
             </div>
-                
+            <div class="nav-box">
+                <i class="closed-btn"></i>
+                <ul class="navbar-nav navbar-right" style="">
+                    <li class="active"><a href="/">产品</a></li>
+                    <li><a href="about_us.html">关于我们</a></li>
+                    <!--<li><a href="#">城市</a></li>-->
+                    <li><a href="https://news.moshroom.cn">新闻</a></li>
+                    <li><a href="cooperation.html">商务合作</a></li>
+                </ul>
+            </div>  
             <div class="us-header-con">
                 <h2 class="about-title-name">关于摩室科技</h2>
             </div>
             <div class="about-us">
-                <img src="images/img/1.jpg" alt="" class="img-banner">
+                <img src="images/img/1.png" alt="" class="img-banner">
                 <p>在大家的生活中，是否出现过出行在外找不到卫生间，找到后又苦于卫生间太脏，气味难闻的问题？</p>
                 <p>北京摩室科技有限公司是一家通过互联网及大数据生产运营移动公共卫生间的新型科技公司。创始人及早期投资人均是互联网行业资深从业者。公司致力于为全球城市及农村人口提供方便干净的如厕服务。公司生产的移动卫生间通过光伏系统供电，免水可冲洗厕具可以不用外接任何水源电源为用户提供跟普通卫生间相同的如厕体验。</p>
                 <p style="text-indent: 0;">与传统移动卫生间相比优势有以下几点：</p>
